--- a/example/source.css
+++ b/example/source.css
@@ -5,12 +5,14 @@
   font-size: 14px;/*px*/
   line-height: 20px;/*px*/
   border-width: 1px;/*px*/
+  background-size: 30px 10px;
 }
 .class2 {
   border: 1px solid black;
   margin-bottom: 1px;/*no*/
   font-size: 20px;/*px*/
   line-height: 30px;/*px*/
+  background-size: 20px 10px;/*px*/
 }
 @media (min-width: 750px) {
   .class3 {
