--- a/example/dest.css
+++ b/example/dest.css
@@ -1,31 +1,51 @@
 .class {
-  border: 1px solid black;
   margin-top: 0;
   border-bottom-width: 1px;
   background-size: 4vw 1.3333333vw;
 }
+.class2 {
+  border: 1px solid black;
+  margin-bottom: 1px;
+}
+
+.class3,
+.class4 {
+  margin: 0px 2.6666667vw;
+  width: 100vw;
+}
+
+@media (min-width: 100vw) {
+  .class3 {
+    font-size: 2.1333333vw;
+    line-height: 2.9333333vw;
+  }
+}
+
+/*
+.class {
+    font-size: 16px;
+}
+*/
 
 [data-dpr="1"] .class {
+  border: 1px solid black;
   font-size: 7px;
   line-height: 10px;
-  border-width: 0.5px;
+  border-width: 1px;
 }
 
 [data-dpr="2"] .class {
+  border: 1px solid black;
   font-size: 14px;
   line-height: 20px;
   border-width: 1px;
 }
 
 [data-dpr="3"] .class {
+  border: 1.5px solid black;
   font-size: 21px;
   line-height: 30px;
   border-width: 1.5px;
-}
-
-.class2 {
-  border: 1px solid black;
-  margin-bottom: 1px;
 }
 
 [data-dpr="1"] .class2 {
@@ -46,15 +66,20 @@
   background-size: 30px 15px;
 }
 
-@media (min-width: 100vw) {
-  .class3 {
-    font-size: 2.1333333vw;
-    line-height: 2.9333333vw;
-  }
+[data-dpr="1"] .class3,
+.class4 {
+  height: 50px;
+  font-size: 12px;
 }
 
-/*
-.class {
-    font-size: 16px;
+[data-dpr="2"] .class3,
+.class4 {
+  height: 100px;
+  font-size: 24px;
 }
-*/
+
+[data-dpr="3"] .class3,
+.class4 {
+  height: 150px;
+  font-size: 36px;
+}
