--- a/example/source.css
+++ b/example/source.css
@@ -1,5 +1,5 @@
 .class {
-  border: 1px solid black;
+  border: 1px solid black;/*px*/
   margin-top: 0px;/*px*/
   border-bottom-width: 1px;/*no*/
   font-size: 14px;/*px*/
@@ -14,6 +14,15 @@
   line-height: 30px;/*px*/
   background-size: 20px 10px;/*px*/
 }
+
+.class3,
+.class4 {
+  margin: 0px 20px;
+  width: 750px;
+  height: 100px;/*px*/
+  font-size: 24px;/*px*/
+}
+
 @media (min-width: 750px) {
   .class3 {
     font-size: 16px;
