--- a/example/dest.css
+++ b/example/dest.css
@@ -16,8 +16,8 @@
 
 @media (min-width: 100vw) {
   .class3 {
-    font-size: 2.1333333vw;
-    line-height: 2.9333333vw;
+    font-size: 16px;
+    line-height: 22px;
   }
 }
 
@@ -48,6 +48,10 @@
   border-width: 1.5px;
 }
 
+[data-rem="true"] .class {
+  background-size: 0.4rem 0.1333333rem;
+}
+
 [data-dpr="1"] .class2 {
   font-size: 10px;
   line-height: 15px;
@@ -66,20 +70,26 @@
   background-size: 30px 15px;
 }
 
-[data-dpr="1"] .class3,
-.class4 {
+[data-rem="true"] .class2 {
+  border: 1px solid black;
+}
+
+[data-dpr="1"] .class3,[data-dpr="1"] .class4 {
   height: 50px;
   font-size: 12px;
 }
 
-[data-dpr="2"] .class3,
-.class4 {
+[data-dpr="2"] .class3,[data-dpr="2"] .class4 {
   height: 100px;
   font-size: 24px;
 }
 
-[data-dpr="3"] .class3,
-.class4 {
+[data-dpr="3"] .class3,[data-dpr="3"] .class4 {
   height: 150px;
   font-size: 36px;
+}
+
+[data-rem="true"] .class3,[data-rem="true"] .class4 {
+  margin: 0px 0.2666667rem;
+  width: 10rem;
 }
