--- a/example/dest.css
+++ b/example/dest.css
@@ -5,76 +5,14 @@ html {
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
 }
-
 html * {
   outline:none;
   -webkit-text-size-adjust: none;
   -webkit-tap-highlight-color:rgba(0,0,0,0);
 }
-
-html, body {
-  font-family: sans-serif;
-}
 body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, input, textarea, p, blockquote, th, td, hr, button, article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
   margin: 0;
   padding: 0;
-}
-
-input, select, textarea {
-  font-size: 100%;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-fieldset, img {
-  border: 0;
-}
-abbr, acronym {
-  border: 0;
-  font-variant: normal;
-}
-del {
-  text-decoration: line-through;
-}
-
-address, caption, cite, code, dfn, em, th, var {
-  font-style: normal;
-  font-weight: 500;
-}
-ol, ul {
-  list-style: none;
-}
-caption, th {
-  text-align: left;
-}
-h1, h2, h3, h4, h5, h6 {
-  font-size: 100%;
-  font-weight: 500;
-}
-
-q:before, q:after {
-  content: '';
-}
-sub, sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sup {
-  top: -0.5em;
-}
-
-sub {
-  bottom: -0.25em;
-}
-a:hover {
-  text-decoration: underline;
-}
-ins, a {
-  text-decoration: none;
 }
 
 body {
@@ -86,23 +24,28 @@ body {
   margin-top: 0;
   border-bottom-width: 1px;
   background-size: 4vw 1.3333333vw;
+  animation: anim1 linear infinite;
 }[data-dpr="1"] .class {
+  border: 1px solid black;
   font-size: 7px;
-  line-height: 10px
+  line-height: 10px;
+  border-width: 1px
 }[data-dpr="2"] .class {
+  border: 1px solid black;
   font-size: 14px;
-  line-height: 20px
+  line-height: 20px;
+  border-width: 1px
 }[data-dpr="3"] .class {
   border: 1.5px solid black;
   font-size: 21px;
   line-height: 30px;
   border-width: 1.5px
-}[data-rem="true"] .class {
-  background-size: 0.4rem 0.1333333rem
 }
 .class2 {
   border: 1px solid black;
+  width: 100vw;
   margin-bottom: 1px;
+  animation: anim12linear infinite;
 }[data-dpr="1"] .class2 {
   font-size: 10px;
   line-height: 15px;
@@ -116,7 +59,7 @@ body {
   line-height: 45px;
   background-size: 30px 15px
 }[data-rem="true"] .class2 {
-  border: 1px solid black
+  width: 10rem
 }
 
 .class3,
@@ -133,7 +76,6 @@ body {
   height: 150px;
   font-size: 36px
 }[data-rem="true"] .class3, [data-rem="true"] .class4 {
-  margin: 0px 0.2666667rem;
   width: 10rem
 }
 
@@ -141,5 +83,42 @@ body {
   .class3 {
     font-size: 16px;
     line-height: 22px;
+    animation: anim3 linear infinite;
+  }
+
+  @-webkit-keyframes anim3 {
+    0%, 100% {
+      -webkit-transform: none;
+    }
+    20%, 60% {
+      -webkit-transform: rotate(-45deg);
+    }
+    40%, 80% {
+      -webkit-transform: rotate(45deg);
+    }
+  }
+}
+
+@-webkit-keyframes anim1 {
+  0%, 100% {
+    -webkit-transform: none;
+  }
+  20%, 60% {
+    -webkit-transform: rotate(-45deg);
+  }
+  40%, 80% {
+    -webkit-transform: rotate(45deg);
+  }
+}
+@keyframes anim2 {
+  0% {
+    height: 75px; /*px*/
+    width: 75px;
+    border: 1px solid #ddd; /*no*/
+  }
+  100% {
+    height: 150px;
+    width: 150px;
+    border: 2px solid #ddd; /*no*/
   }
 }
