--- a/example/source.css
+++ b/example/source.css
@@ -5,102 +5,14 @@ html {
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
 }
-
 html * {
   outline:none;
   -webkit-text-size-adjust: none;
   -webkit-tap-highlight-color:rgba(0,0,0,0);
 }
-
-html, body {
-  font-family: sans-serif;
-}
-
-/* 内外边距通常让各个浏览器样式的表现位置不同 */
 body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, input, textarea, p, blockquote, th, td, hr, button, article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
   margin: 0;
   padding: 0;
-}
-
-input, select, textarea {
-  font-size: 100%;
-}
-
-/* 去掉各 Table  cell 的边距并让其边重合 */
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-/* 去除默认边框 */
-fieldset, img {
-  border: 0;
-}
-
-/* 去掉 firefox 下此元素的边框 */
-abbr, acronym {
-  border: 0;
-  font-variant: normal;
-}
-
-/* 一致的 del 样式 */
-del {
-  text-decoration: line-through;
-}
-
-address, caption, cite, code, dfn, em, th, var {
-  font-style: normal;
-  font-weight: 500;
-}
-
-/* 去掉列表前的标识, li 会继承 */
-ol, ul {
-  list-style: none;
-}
-
-/* 对齐是排版最重要的因素, 别让什么都居中 */
-caption, th {
-  text-align: left;
-}
-
-/* 来自 yahoo, 让标题都自定义, 适应多个系统应用 */
-h1, h2, h3, h4, h5, h6 {
-  font-size: 100%;
-  font-weight: 500;
-}
-
-q:before, q:after {
-  content: '';
-}
-
-/* 统一上标和下标 */
-sub, sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sup {
-  top: -0.5em;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-/* 正常链接 未访问 */
-a:link {
-}
-
-/* 鼠标悬停 */
-a:hover {
-  text-decoration: underline;
-}
-
-/* 默认不显示下划线，保持页面简洁 */
-ins, a {
-  text-decoration: none;
 }
 
 body {
@@ -109,7 +21,7 @@ body {
 }
 
 .empty {
-  
+
 }
 
 .class {
@@ -120,13 +32,16 @@ body {
   line-height: 20px;/*px*/
   border-width: 1px;/*px*/
   background-size: 30px 10px;
+  animation: anim1 linear infinite;
 }
 .class2 {
   border: 1px solid black;
+  width: 750px;
   margin-bottom: 1px;/*no*/
   font-size: 20px;/*px*/
   line-height: 30px;/*px*/
   background-size: 20px 10px;/*px*/
+  animation: anim12linear infinite;
 }
 
 .class3,
@@ -141,6 +56,43 @@ body {
   .class3 {
     font-size: 16px;
     line-height: 22px;
+    animation: anim3 linear infinite;
+  }
+
+  @-webkit-keyframes anim3 {
+    0%, 100% {
+      -webkit-transform: none;
+    }
+    20%, 60% {
+      -webkit-transform: rotate(-45deg);
+    }
+    40%, 80% {
+      -webkit-transform: rotate(45deg);
+    }
+  }
+}
+
+@-webkit-keyframes anim1 {
+  0%, 100% {
+    -webkit-transform: none;
+  }
+  20%, 60% {
+    -webkit-transform: rotate(-45deg);
+  }
+  40%, 80% {
+    -webkit-transform: rotate(45deg);
+  }
+}
+@keyframes anim2 {
+  0% {
+    height: 75px; /*px*/
+    width: 75px;
+    border: 1px solid #ddd; /*no*/
+  }
+  100% {
+    height: 150px;
+    width: 150px;
+    border: 2px solid #ddd; /*no*/
   }
 }
 
