--- a/example/source.css
+++ b/example/source.css
@@ -54,9 +54,15 @@ body {
 
 @media (min-width: 750px) {
   .class3 {
-    font-size: 16px;
+    font-size: 16px;/*px*/
     line-height: 22px;
     animation: anim3 linear infinite;
+  }
+
+  .class4 {
+    width: 600px;
+    font-size: 32px;/*px*/
+    border: 1px solid #ccc;/*no*/
   }
 
   @-webkit-keyframes anim3 {
