--- a/example/dest.css
+++ b/example/dest.css
@@ -23,7 +23,7 @@ body {
 .class {
   margin-top: 0;
   border-bottom-width: 1px;
-  background-size: 30px 10px;
+  background-size: 8vw 2.6666667vw;
   animation: anim1 linear infinite;
 }[data-dpr="1"] .class {
   border: 1px solid black;
@@ -43,7 +43,7 @@ body {
 }
 .class2 {
   border: 1px solid black;
-  width: 750px;
+  width: 200vw;
   margin-bottom: 1px;
   animation: anim12linear infinite;
 }[data-dpr="1"] .class2 {
@@ -62,8 +62,8 @@ body {
 
 .class3,
 .class4 {
-  margin: 0px 20px;
-  width: 750px;
+  margin: 0px 5.3333333vw;
+  width: 200vw;
 }[data-dpr="1"] .class3, [data-dpr="1"] .class4 {
   height: 100px;
   font-size: 24px
@@ -77,7 +77,7 @@ body {
 
 @media (min-width: 200vw) {
   .class3 {
-    line-height: 22px;
+    line-height: 5.8666667vw;
     animation: anim3 linear infinite;
   }[data-dpr="1"] .class3 {
     font-size: 16px
@@ -88,7 +88,7 @@ body {
 }
 
   .class4 {
-    width: 600px;
+    width: 160vw;
     border: 1px solid #ccc;
   }[data-dpr="1"] .class4 {
     font-size: 32px
